# Library

./: CMakeCache.txt  CMakeLists.txt  Database.h  Library.pro  Login-jaghoua--.ui  Login.cpp  Login.h  Login.ui  ManageAuthors-jaghoua--.ui  ManageAuthors.cpp  ManageAuthors.h  ManageAuthors.ui  README.md  addBook-jaghoua--.ui  addBook.cpp  addBook.h  addBook.ui  addMember-jaghoua--.ui  addMember.cpp  addMember.h  addMember.ui  authorsList-jaghoua--.ui  authorsList.cpp  authorsList.h  authorsList.ui  base.xml  bookList-jaghoua--.ui  bookList.cpp  bookList.h  bookList.ui  cart.cpp  cart.h  cart.ui  cartLocalisation.html  color.xml  deleteMember-jaghoua--.ui  deleteMember.cpp  deleteMember.h  deleteMember.ui  deletebook-jaghoua--.ui  (+69 more)
Desktop_Qt_6_9_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_Login.h  ui_ManageAuthors.h  ui_addBook.h  ui_addMember.h  ui_authorsList.h  ui_bookList.h  ui_deleteMember.h  ui_deletebook.h  ui_digitalLibrary.h  ui_editBook.h  ui_editMember.h  ui_genreList.h  ui_manageBooks.h  ui_membersList.h  ui_newPasswd.h  ui_signUp.h  ui_stats.h  ui_studentlibrary.h
Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Login.cpp.B4D38D178F147E51.idx  Login.h.41D28B134B381950.idx  ManageAuthors.cpp.C8EACC1F7977251E.idx  ManageAuthors.h.B3816E2F5EDFAE3B.idx  QAbstractAxis.4692A5462F4A5390.idx  QAbstractBarSeries.6B77165E68B1E42A.idx  QAbstractSeries.C1B084A19DD12D1E.idx  QAction.D70994811022CF2C.idx  QActionGroup.3BE5F5E1E81D71B0.idx  QAreaSeries.69163CC263BAB7D4.idx  QBarCategoryAxis.6A26BFDBD4414FE3.idx  QBarModelMapper.1328192239873BAF.idx  QBarSeries.58EC0814F6B81144.idx  QBarSet.35E2FAC077D24EE7.idx  QBoxPlotModelMapper.2411523B69432238.idx  QBoxPlotSeries.FA38BA4AE51D7B4A.idx  QBoxSet.9EAEB2BC4F1F9FD7.idx  QBrush.81F99E5CB7D1EB82.idx  QCandlestickModelMapper.0DE1CCFB29DD2B4E.idx  QCandlestickSeries.1E05E5B201D06668.idx  QChart.ACD564D989F63508.idx  QChartGlobal.CD8B85088DB23AF6.idx  QChartView.191912C39CC379F7.idx  QCommonStyle.9AAD152E51C73717.idx  QDialog.F3D2C66F0F283E1C.idx  QFileSystemModel.B1306530F862609E.idx  QFont.C33E38861815C84E.idx  QImage.3A62B4230A6F5E2D.idx  QLayout.77621F1A705A48CE.idx  QLegend.E1171D506212D285.idx  QLegendMarker.A89B91C0E31AC5DD.idx  QMargins.2075B80381140FAC.idx  QMatrix3x3.57CABA434D7FF454.idx  QMatrix4x4.8D317F2055640EFB.idx  QModelIndex.648CC94C52E1426D.idx  QObject.CA0335EC66100F55.idx  QOpenGLContext.57B434E41812A551.idx  QPaintDevice.065D33808D91557A.idx  QPaintDeviceWindow.E1F17AC9E3F87B14.idx  QPen.E5CBE5EE7418C338.idx  (+490 more)
Desktop_Qt_6_9_0_MinGW_64_bit-Debug/debug/: object_script.Library.Debug
Desktop_Qt_6_9_0_MinGW_64_bit-Debug/release/: object_script.Library.Release
cartLocalisation_files/: saved_resource.html
html/: map.html
